# rust_road_router-fork

./: .gitignore  .gitmodules  Cargo.toml  debug-41383.38400000001-41383.38400000001.py  debug-56911.132000000005-56093.656.py
cooperative/: Cargo.toml
cooperative/src/: io.rs  lib.rs  main.rs
cooperative/src/dijkstra/: capacity_dijkstra_ops.rs  mod.rs  model.rs  ptv_server.rs  server.rs  td_capacity_dijkstra_ops.rs
cooperative/src/dijkstra/corridor_elimination_tree/: customized.rs  mod.rs  parallelization.rs  server.rs
cooperative/src/dijkstra/elimination_tree/: mod.rs
cooperative/src/dijkstra/potentials/: cch_parallelization_util.rs  init_cch_potential.rs  mod.rs  td_zero_potential.rs  (+2 more)
cooperative/src/experiments/: compare_static_cooperative.rs  evaluate_potential_quality.rs  evaluate_td_impact.rs  mod.rs  run_server.rs  run_server_with_potentials.rs  run_td_server.rs  types.rs
cooperative/src/graph/: capacity_graph.rs  capacity_graph_traits.rs  edge_buckets.rs  mod.rs  preprocessing.rs  speed_functions.rs  td_capacity_graph.rs  traffic_functions.rs  travel_time_function.rs  weight_functions.rs
cooperative/src/io/: extract_scc.rs  io_coordinates.rs  io_graph.rs  io_interval_minima_customization.rs  io_node_order.rs  io_population_grid.rs  io_preprocess_graph.rs  io_ptv_customization.rs  io_queries.rs  io_raw_graph.rs  io_td_graph.rs  load_graph.rs  load_td_graph.rs  mod.rs  parse_visum_graph.rs  population_grid.rs
cooperative/src/util/: cli_args.rs  mod.rs  profile_search.rs  query_path_visualization.rs
cooperative/src/visualization/: mod.rs
cooperative/tests/: approximated_interval_ops.rs  profile_search.rs  td_partial_backward_profiles.rs  travel_time_function.rs  utils.rs
(+96 files in other folders)
