[package]
name = "cooperative"
version = "0.1.0"
edition = "2018"
authors = ["Tim 'tim3z' Zeitz <mail@tim3z.net>", "Nils Werner <nils.werner@student.kit.edu>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["report-to-stderr"]
report-to-stderr = []

[dependencies]
rust_road_router = { path = "../engine" }
conversion = { path = "../conversion" }
