[package]
name = "cooperative"
version = "0.1.0"
edition = "2018"
authors = ["Tim 'tim3z' Zeitz <mail@tim3z.net>", "Nils Werner <nils.werner@student.kit.edu>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["report-to-stderr"]
report-to-stderr = []

[dependencies]
rust_road_router = { path = "../engine" }
conversion = { path = "../conversion" }
rand = "^0.8.4"
rand_distr = "^0.4.1"
#csv = "^1.1.6"
#byteorder = "1.4.3"
#rayon = "1.5.0"
#num = "0.4.0"