[package]
name = "cooperative"
version = "0.1.0"
edition = "2018"
authors = ["Tim 'tim3z' Zeitz <mail@tim3z.net>", "Nils Werner <nils.werner@student.kit.edu>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["report-to-stderr"]
report-to-stderr = []

[dependencies]
rust_road_router = { path = "../engine", features = ["default"] }
conversion = { path = "../conversion" }
rand = "^0.8.4"
rand_distr = "^0.4.1"
time = "^0.1.40"
fux_kdtree = "^0.2.0"
rayon = "^1.5.1"
core_affinity = "^0.5.9"
scoped-tls = "^1.0.0"